# sdlc-automation

./: .env.example  README.md  app.py  pyproject.toml
agents/: developer.py  product_manager.py  scrum_master.py
